--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.0",
     "firebase-admin": "^9.1.1",
     "gh-pages": "^3.1.0",
+    "js-cookie": "^2.2.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-jutsu": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
